Création et vérification du JWT Token réalisé

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,4 +1,9 @@
+# voici ce dont vous avez besoin comme éléments
+
 PASSWORD = dbpassword
 USER = dbuser
 DATABASE_DOMAIN = dbdomain
 PORT=4000
+URL= 'http://localhost:4000'
+IMAGES_PATH = 'images'
+JWT_SECRET = ecristonjwtsecret
